# Engine-project-

./: .gitattributes  Bigboy.sav  DamageSphere.h  Drone.h  Game3.vcxproj  Game3.vcxproj.filters  Laser.h  ParticleMaterials.h  README.md  Source.cpp  imgui.ini
Project/: CMakeLists.txt
Project/Source/: Bullet.h  DamageSphere.h  Drone.h  Entity.h  Explodion.h  Human.h  Laser.h  Mission.h  ParticleMaterials.h  Parts.h  Rocket.h  Source.cpp
Project/Source/engine/Components/: Engine.h  Redactor.h
Project/Source/engine/Shaders/: GenPrimitiveTextureShader.frag
Project/backup/Maps/: NewMap.sav
Project/backup/Scenes/: Gun.sav.back  No.sav  Sun.sav.back  base.sav  base.sav.back  no.sav.back
Project/backup/Ships/: PreMissionBackup.sav  Save0.sav.sav  Spinner.sav
Project/dependencies/GLFW/: CMakeCache.txt  cmake_install.cmake  cmake_uninstall.cmake
Project/dependencies/GLFW/docs/: Doxyfile
Project/dependencies/GLFW/examples/: cmake_install.cmake  particles  sharing  simple  wave
Project/dependencies/GLFW/src/: cmake_install.cmake
Project/dependencies/GLFW/tests/: Makefile  clipboard  cursor  events  glfwinfo  iconify  inputlag  msaa  reopen  triangle-vulkan
Project/dependencies/glad/: CMakeLists.txt  cmake_install.cmake
Project/dependencies/glad/src/: glad.c
Project/dependencies/stb_image/: Makefile
Project/engine/Shaders/: FillScreen.frag
Project/engine/Shaders/Bloom/: bloom.frag
Project/engine/Shaders/Circle/: Circle.vert
Project/engine/Shaders/InstancedNormalMap/: InstancedNMDraw.vert
Project/engine/Shaders/InstancedTexturedQuad/: InstancedTexturedQuad.frag
Project/engine/Shaders/NeuralNetworks/: NN.vert
Project/engine/Shaders/NormalMap/: NormalMapDraw.frag  NormalMapDraw.vert
Project/engine/Shaders/Quad/: Quad.frag  default.vert
Project/engine/z1ShaderTests/: Bald.frag
Project/resources/Maps/: Map1.sav  mappa.sav
(+229 files in other folders)
